--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,33 +30,45 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/space_top" />
 
+    <Space
+        android:id="@+id/space_avatar_username"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        app:layout_constraintTop_toBottomOf="@id/iv_avatar" />
+
     <TextView
         android:id="@+id/tv_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="80dp"
         android:text="学号："
         android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_avatar" />
+        app:layout_constraintTop_toBottomOf="@id/space_avatar_username" />
+
+    <Space
+        android:id="@+id/space_username_password"
+        android:layout_width="match_parent"
+        android:layout_height="12dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_username" />
 
     <TextView
         android:id="@+id/tv_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="80dp"
         android:text="密码："
-        android:layout_marginTop="12dp"
         android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_username" />
+        app:layout_constraintTop_toBottomOf="@id/space_username_password" />
 
     <EditText
         android:id="@+id/et_username"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="100dp"
+        android:layout_marginEnd="80dp"
+        android:background="@drawable/bg_edittext"
+        android:inputType="number"
         app:layout_constraintBottom_toBottomOf="@id/tv_username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/tv_username"
@@ -66,23 +78,30 @@
         android:id="@+id/et_password"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginEnd="100dp"
+        android:layout_marginEnd="80dp"
+        android:background="@drawable/bg_edittext"
+        android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="@id/tv_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/tv_password"
         app:layout_constraintTop_toTopOf="@id/tv_password" />
 
+    <Space
+        android:id="@+id/space_password_button"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        app:layout_constraintTop_toBottomOf="@id/et_password" />
 
     <Button
+        android:id="@+id/btn_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btn_login"
-        android:text="登录"
-        app:layout_constraintStart_toStartOf="parent"
         android:background="@drawable/bg_me_tv_identity"
+        android:text="登录"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_password"
-        android:layout_marginTop="30dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/space_password_button" />
+
     <FrameLayout
         android:id="@+id/ll_pwd_hint"
         android:layout_width="match_parent"
