--- a/app/src/main/res/layout/item_supervise_class.xml
+++ b/app/src/main/res/layout/item_supervise_class.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bg_item_supervise_class"
+    android:background="@drawable/bg_item"
     android:padding="25dp">
 
     <TextView
