--- a/app/src/main/res/layout/fragment_coursetable.xml
+++ b/app/src/main/res/layout/fragment_coursetable.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.uu.attendance.ui.fragment.CourseTableViewModel" />
@@ -14,6 +15,13 @@
         android:layout_height="match_parent"
         android:background="@drawable/bg_page"
         tools:context=".ui.fragment.CourseTableFragment">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@color/white"
+            app:layout_constraintBottom_toBottomOf="@id/view_margin"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_title"
@@ -44,7 +52,7 @@
         <TextView
             android:id="@+id/tv_month"
             android:layout_width="30dp"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_marginTop="10dp"
             android:gravity="center"
             android:text='@{viewModel.currentMonth+"\n月"}'
@@ -52,6 +60,12 @@
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_title" />
+
+        <View
+            android:id="@+id/view_margin"
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_month" />
 
         <LinearLayout
             android:id="@+id/ll_section"
@@ -62,7 +76,7 @@
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_month" />
+            app:layout_constraintTop_toBottomOf="@id/view_margin" />
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/vp_table"
