督导详情基本完成，接入leakcanary，修复Fragment内存泄漏

--- a/app/src/main/res/layout/popup_course_detail.xml
+++ b/app/src/main/res/layout/popup_course_detail.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="bottom"
-    android:background="@drawable/bg_course"
+    android:background="@drawable/bg_corner_10"
     android:orientation="vertical"
     android:padding="10dp">
 
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_weight="1"
-            android:background="@drawable/bg_course"
+            android:background="@drawable/bg_corner_10"
             android:orientation="vertical"
             android:padding="10dp">
 
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_weight="1"
-            android:background="@drawable/bg_course"
+            android:background="@drawable/bg_corner_10"
             android:orientation="vertical"
             android:padding="10dp">
 
@@ -67,7 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_weight="1"
-            android:background="@drawable/bg_course"
+            android:background="@drawable/bg_corner_10"
             android:orientation="vertical"
             android:padding="10dp">
 
@@ -89,7 +89,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_weight="1"
-            android:background="@drawable/bg_course"
+            android:background="@drawable/bg_corner_10"
             android:orientation="vertical"
             android:padding="10dp">
 
@@ -117,7 +117,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_weight="1"
-            android:background="@drawable/bg_course"
+            android:background="@drawable/bg_corner_10"
             android:orientation="vertical"
             android:padding="10dp">
 
@@ -139,7 +139,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_weight="1"
-            android:background="@drawable/bg_course"
+            android:background="@drawable/bg_corner_10"
             android:orientation="vertical"
             android:padding="10dp">
 
