--- a/app/src/main/res/layout/activity_rules.xml
+++ b/app/src/main/res/layout/activity_rules.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
-        android:background="@drawable/bg_item"
+        android:background="@drawable/bg_corner_35"
         android:orientation="vertical"
         android:padding="25dp"
         app:layout_constraintTop_toTopOf="parent">
