接入请假列表（后端貌似有问题），课程表接入部分

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -14,8 +14,8 @@
     <item
         android:id="@+id/navigation_supervise"
         android:icon="@drawable/ic_tab_supervise"
-        android:title="督导" />
-<!--        android:visible="false" />-->
+        android:title="督导"
+        android:visible="false" />
 
     <item
         android:id="@+id/navigation_me"
