课程表、督导列表接入，签到websocket初步

--- a/app/src/main/res/layout/item_supervise_class.xml
+++ b/app/src/main/res/layout/item_supervise_class.xml
@@ -4,35 +4,28 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bg_corner_35"
-    android:padding="25dp">
-
-    <TextView
-        android:id="@+id/tv_course_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="课程名称"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    android:layout_margin="25dp"
+    android:padding="20dp">
 
     <TextView
         android:id="@+id/tv_class_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:paddingTop="10dp"
         android:paddingBottom="10dp"
-        android:text="课程的班级名称"
+        android:text="课程名称"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@id/tv_status"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_course_name" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_class_time"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="上课时间：每周上课的那一天，若分单双周表明"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/tv_status"
         app:layout_constraintTop_toBottomOf="@id/tv_class_name" />
 
     <TextView
