--- a/app/src/main/res/layout/fragment_supervise.xml
+++ b/app/src/main/res/layout/fragment_supervise.xml
@@ -7,9 +7,17 @@
     android:orientation="vertical"
     tools:context=".ui.fragment.SuperviseFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_superviselist"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_superviselist"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:paddingTop="25dp" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </LinearLayout>
