请假申请、考勤申诉支持下拉刷新

--- a/app/src/main/res/layout/activity_leave_application.xml
+++ b/app/src/main/res/layout/activity_leave_application.xml
@@ -6,9 +6,16 @@
     android:background="@drawable/bg_page"
     tools:context=".ui.activity.LeaveApplicationActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_application_list"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_application_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
