--- a/app/src/main/res/layout/item_leave_application.xml
+++ b/app/src/main/res/layout/item_leave_application.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="25dp"
     android:background="@drawable/bg_corner_35"
-    android:padding="25dp">
+    android:padding="20dp">
 
     <TextView
         android:id="@+id/tv_course_name"
@@ -21,6 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:text="申请时间："
+        app:layout_constraintEnd_toStartOf="@id/tv_status"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_course_name" />
 
