--- a/app/src/main/res/layout/item_attendance_appeal.xml
+++ b/app/src/main/res/layout/item_attendance_appeal.xml
@@ -3,8 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bg_corner_35"
-    android:padding="25dp">
+    android:layout_marginStart="25dp"
+    android:layout_marginTop="25dp"
+    android:layout_marginEnd="25dp"
+    android:background="@drawable/bg_corner_20"
+    android:padding="20dp">
 
     <TextView
         android:id="@+id/tv_course_name"
