--- a/app/src/main/res/layout/fragment_coursetable_item.xml
+++ b/app/src/main/res/layout/fragment_coursetable_item.xml
@@ -20,13 +20,20 @@
             android:orientation="horizontal"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <FrameLayout
-            android:id="@+id/fl_body"
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="20dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/swipe"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ll_header" />
+            app:layout_constraintTop_toBottomOf="@id/ll_header">
+
+            <FrameLayout
+                android:id="@+id/fl_body"
+                android:layout_width="match_parent"
+                android:layout_marginTop="20dp"
+                android:layout_height="0dp" />
+
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
