--- a/app/src/main/res/layout/fragment_coursetable_item.xml
+++ b/app/src/main/res/layout/fragment_coursetable_item.xml
@@ -21,17 +21,17 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/swipe"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ll_header">
 
             <FrameLayout
                 android:id="@+id/fl_body"
                 android:layout_width="match_parent"
-                android:layout_marginTop="20dp"
-                android:layout_height="0dp" />
+                android:layout_height="match_parent" />
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
