--- a/app/src/main/res/layout/fragment_signin.xml
+++ b/app/src/main/res/layout/fragment_signin.xml
@@ -30,7 +30,7 @@
                 android:textColor="@color/black"
                 android:textSize="30sp" />
 
-            <Button
+            <TextView
                 android:id="@+id/btn_signin"
                 android:layout_width="250dp"
                 android:layout_height="250dp"
