--- a/app/src/main/res/layout/activity_rules.xml
+++ b/app/src/main/res/layout/activity_rules.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_page"
-    tools:context=".ui.activity.RulesActivity">
+    tools:context=".ui.me.activity.RulesActivity">
 
     <LinearLayout
         android:id="@+id/ll_rules"
