--- a/app/src/main/res/layout/activity_supervise_detail.xml
+++ b/app/src/main/res/layout/activity_supervise_detail.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_page"
-    tools:context=".ui.activity.SuperviseDetailActivity">
+    tools:context=".ui.supervise.activity.SuperviseDetailActivity">
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/vp2"
