--- a/app/src/main/res/layout/fragment_supervise_card.xml
+++ b/app/src/main/res/layout/fragment_supervise_card.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.fragment.SuperviseListFragment">
+    tools:context=".ui.supervise.fragment.SuperviseListFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
