--- a/app/src/main/res/layout/activity_leave_application.xml
+++ b/app/src/main/res/layout/activity_leave_application.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_page"
-    tools:context=".ui.activity.LeaveApplicationActivity">
+    tools:context=".ui.me.activity.LeaveApplicationActivity">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe"
