--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.LoginActivity">
+    tools:context=".ui.login.activity.LoginActivity">
 
     <ImageView
         android:id="@+id/iv_bg"
@@ -21,7 +21,7 @@
         android:layout_height="65dp"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.uu.attendance.ui.view.RoundImageView
+    <com.uu.attendance.ui.common.view.RoundImageView
         android:id="@+id/iv_avatar"
         android:layout_width="90dp"
         android:layout_height="90dp"
