--- a/app/src/main/res/layout/activity_new_leave_application.xml
+++ b/app/src/main/res/layout/activity_new_leave_application.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.activity.NewLeaveApplicationActivity">
+    tools:context=".ui.coursetable.activity.NewLeaveApplicationActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
