--- a/app/src/main/res/layout/popup_course_detail.xml
+++ b/app/src/main/res/layout/popup_course_detail.xml
@@ -170,6 +170,17 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/tv_appeal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@drawable/bg_corner_10"
+            android:padding="6dp"
+            android:text="申诉"
+            android:textColor="@color/black"
+            app:drawableStartCompat="@drawable/ic_attendance_appeal" />
+
+        <TextView
             android:id="@+id/tv_leave_apply"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
