feat: 签到页布局优化，更新依赖

--- a/app/src/main/res/layout/fragment_signin.xml
+++ b/app/src/main/res/layout/fragment_signin.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -26,28 +27,38 @@
                 android:layout_marginStart="50dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="50dp"
-                android:layout_marginBottom="30dp"
+                android:layout_marginBottom="10dp"
                 android:text="UU考勤"
                 android:textColor="@color/black"
                 android:textSize="30sp" />
 
-            <TextView
-                android:id="@+id/btn_signin"
-                android:layout_width="250dp"
-                android:layout_height="250dp"
+            <com.lihang.ShadowLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:background="@drawable/bg_btn_signin_nosign"
-                android:gravity="center"
-                android:text="无签到"
-                android:textColor="@color/white"
-                android:textSize="30sp" />
+                app:hl_cornerRadius="125dp"
+                app:hl_shadowColor="@color/black"
+                app:hl_shadowLimit="10dp"
+                app:hl_shadowOffsetY="10dp">
+
+                <TextView
+                    android:id="@+id/btn_signin"
+                    android:layout_width="250dp"
+                    android:layout_height="250dp"
+                    android:background="@drawable/bg_btn_signin_nosign"
+                    android:gravity="center"
+                    android:text="无签到"
+                    android:textColor="@color/white"
+                    android:textSize="30sp" />
+
+            </com.lihang.ShadowLayout>
 
             <TextView
                 android:id="@+id/tv_signin_hint"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:text="现无签到"
                 android:textColor="@color/gray"
@@ -59,7 +70,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="30dp">
+                android:layout_marginTop="30dp"
+                app:cardCornerRadius="15dp">
 
                 <com.amap.api.maps.MapView
                     android:id="@+id/mapView"
