--- a/app/src/main/res/layout/activity_new_attendance_appeal.xml
+++ b/app/src/main/res/layout/activity_new_attendance_appeal.xml
@@ -111,12 +111,35 @@
             <EditText
                 android:id="@+id/et_reason"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="200dp"
                 android:layout_margin="5dp"
                 android:background="@android:color/transparent"
                 android:gravity="top"
                 android:hint="请输入"
                 android:textSize="14sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/bg_corner_20"
+            android:visibility="invisible" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/bg_corner_10"
+            android:padding="5dp">
+
+            <ImageView
+                android:id="@+id/iv_img"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_add" />
 
         </LinearLayout>
 
